fix: simplify filters article

--- a/src/docs/5.37.x/file-manager/extending/customizing-file-filters.mdx
+++ b/src/docs/5.37.x/file-manager/extending/customizing-file-filters.mdx
@@ -29,31 +29,12 @@ This feature is available since Webiny **v5.37.0**.
 
 ## Overview
 
-By default, Webiny File Manager offers a single built-in filter, to help you quickly filter files based on their type (images, documents, videos). In this article, you will learn how to add more filters, but also remove or replace existing filters in the filters bar.
-
-<Image src={fmFilters} title="Built-in filter by type" />
-
-## Configuration
-
-All modifications that are currently available for the File Manager, are exposed via a dedicated configuration component: the `FileManagerViewConfig` component. This component has other components attached to it, so by importing this one component, you get everything you need to customize the File Manager. This component contains 2 child components: `Browser` and `FileDetails`.
-
-### Browser
+By default, File Manager offers a single built-in filter, to help you quickly filter files based on their type (images, documents, videos). To customize filters, you need to use the `FileManagerViewConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
 
 Browser is the main area of the File Manager, where users browse files, apply filters, perform searching, organize files into folders, upload new files, etc.
+<Image src={fmFilters} title="Browser and the built-in filter by type" />
 
-<Image src={fmGridView} title="File Manager Browser" />
-
-Components to customize this part of the File Manager are located in the `FileManagerViewConfig.Browser` namespace.
-
-### File Details
-
-File details is the drawer that shows the details of each file, and allows users to update file attributes, crop the file, add file tags, etc.
-
-<Image src={fmFileDetails} title="File Details Drawer" />
-
-Components to customize this part of the File Manager are located in the `FileManagerViewConfig.FileDetails` namespace.
-
-## Add a New Filter
+## Add a Filter
 
 To add a new filter, you need to use the `FileManagerViewConfig` component and mount it within your `Admin` app. Your filter is just a regular React element, so it can render anything.
 
@@ -85,7 +66,7 @@ export const App: React.FC = () => {
 
 Next time you open your File Manager, and expand the filters bar, you'll see your new element there. This is the whole process of registering a new filter element. In the following sections, we'll focus on implementing actual filtering.
 
-### Example 1: Set and Unset a Filter
+### Simple Filter
 
 The following example shows how to implement a filter that toggles between "all files" and "large files". For this example, we treat all files larger than 200KB as "large files". Note that we are only showing the actual filter implementation. To see the filter registration
 process, revisit the previous section.
@@ -115,9 +96,9 @@ Under the hood, filters are handled via a regular form component. This means tha
 
 <Image src={fmToggleFilter} title="Toggle Filter in Action" />
 
-### Example 2: Using Filters Converter for Complex Filters
+### Advanced Filter
 
-Sometimes you need to implement filtering logic that is a bit more complex than just setting a single value. The following example shows a filter in form of a dropdown menu, where each option needs to use a different GraphQL query operator. `> 200KB` needs to use the `size_gt` key, while `< 200KB` needs to use the `size_lt` key. This cannot be achieved with simple form binding.
+Sometimes, you need to implement filtering logic that is a bit more complex than just setting a single value. The following example shows a filter in form of a dropdown menu, where each option needs to use a different GraphQL query operator. `> 200KB` needs to use the `size_gt` key, while `< 200KB` needs to use the `size_lt` key. This cannot be achieved with simple form binding.
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, which will allow you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API, when the user interacts with the filters UI.
 
@@ -166,7 +147,7 @@ const convertFilters = ({ size, ...rest }: any) => {
   input to the next converter.
 </Alert>
 
-## Discovering Existing Filters
+## Discovering Filters
 
 This section demonstrates how you can discover the names of existing filters. This is important for further sections on positioning, removing, and replacing filters.
 
@@ -174,7 +155,7 @@ The easiest way to discover existing filters is to use the React Dev Tools plugi
 
 <Image src={fmDiscoverFilters} title="Discover Existing Filters" />
 
-## Positioning Your Filter
+## Positioning a Filter
 
 To position your custom filter before or after an existing filter, you can use the `before` and `after` props on the `<Filter>` element:
 
@@ -186,7 +167,7 @@ To position your custom filter before or after an existing filter, you can use t
 
 <Image src={fmPositioBefore} title="Position Your Filter Before Another Filter" />
 
-## Removing an Existing Filter
+## Removing a Filter
 
 Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name, and pass a `remove` prop to the `<Filter>` element:
 
@@ -196,7 +177,7 @@ Sometimes you might want to remove an existing filter. All you need to do is ref
 </FileManagerViewConfig>
 ```
 
-## Replacing an Existing Filter
+## Replacing a Filter
 
 To replace an existing filter with a new filter element, you need to reference the existing filter by name, and pass a new element via the `element` prop:
 
