wip: add PR link #3368 to the title for lexical in hcms section

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -56,7 +56,7 @@ All of these improvements take our File Manager to the next level. But the big c
 
 ## Headless CMS
 
-### Introducing Lexical Editor For the Rich Text Field
+### Introducing Lexical Editor For the Rich Text Field ([#3368](https://github.com/webiny/webiny-js/pull/3368))
 
 With this release, we are introducing the new Lexical Editor for the Headless CMS's rich text field. We are bringing the same rich text editing experience that you are used to from the Page Builder application, to the Headless CMS.
 
