fix: move code highlight to the client side

--- a/src/docs/5.37.x/file-manager/extending/customizing-file-filters.mdx
+++ b/src/docs/5.37.x/file-manager/extending/customizing-file-filters.mdx
@@ -38,7 +38,7 @@ Browser is the main area of the File Manager, where users browse files, apply fi
 
 To add a new filter, you need to use the `FileManagerViewConfig` component and mount it within your `Admin` app. Your filter is just a regular React element, so it can render anything.
 
-```tsx apps/admin/src/App.tsx
+```diff-tsx apps/admin/src/App.tsx
 import React from "react";
 import { Admin } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
