wip: removed the 'install' topic and few content updates

--- a/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
@@ -1,9 +1,4 @@
----
-title: Render Lexical Rich Text Content
-description: Learn how to render rich text content from Headless CMS written with Lexical Editor.
----
-
-import { Alert } from "@/components/Alert";
+import Link from "next/link";import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
 
@@ -13,59 +8,13 @@ import { Alert } from "@/components/Alert";
 
 ## Overview
 
-Webiny uses Lexical editor [lexical.dev](https://lexical.dev) as a go to Rich Text Editor, with some additional plugins. To speed up the rendering of data for developers, we created this component.
-
-## Install
-
-```
-npm install --save @webiny/react-rich-text-lexical-renderer
-```
-
-Or if you prefer yarn:
-
-```
-yarn add @webiny/react-rich-text-lexical-renderer
-```
-
+Webiny uses Lexical editor [lexical.dev](https://lexical.dev) as a go to Rich Text Editor, with some additional plugins.
 ## Usage
 
 Fetch your data from Headless CMS, then pass it to the component like this:
 
 ```tsx
 import { RichTextLexicalRenderer } from "@webiny/react-rich-text-lexical-renderer";
-
-// Load content from Headless CMS (here we show what your content might look like).
-const content = {
-    root: {
-        children: [
-            {
-                children: [
-                    {
-                        detail: 0,
-                        format: 0,
-                        mode: "normal",
-                        style: "",
-                        text: "A well written paragraph of text can bring so much joy!",
-                        type: "text",
-                        version: 1
-                    }
-                ],
-                direction: "ltr",
-                styles: [],
-                format: "",
-                indent: 0,
-                tag: "p",
-                type: "paragraph-element",
-                version: 1
-            }
-        ],
-            direction: "ltr",
-            format: "",
-            indent: 0,
-            type: "root",
-            version: 1
-    }
-}
 
 // Mount the component
 <RichTextLexicalRenderer value={content} />;
@@ -76,8 +25,8 @@ const content = {
 You can add custom lexical nodes for rendering your content:
 
 ```tsx
-
-class MyCustomNode extends SomeOtherNode {
+import { ParagraphNode } from "lexical";
+class MyCustomNode extends ParagraphNode {
     ...
 }
 
@@ -85,11 +34,12 @@ class MyCustomNode extends SomeOtherNode {
 <RichTextLexicalRenderer value={content} nodes={[MyCustomNode]} />;
 ```
 
-## Adding your custom typography theme.
+Please check [lexical docs](https://lexical.dev/docs/concepts/nodes), to learn more how create your custom nodes. 
 
-You can override Webiny default typography theme that is used by lexical editor by providing your custom typography object.
+## Modifying Typography Options
 
-Please [ read our docs ](https://www.webiny.com/docs/page-builder/theming/theme-object) before add you custom theme.
+Modifying typography options that are displayed by the editor is performed at the theme level, via the theme object:
+
 ```tsx
 
 const myTheme = {
@@ -101,8 +51,10 @@ const myTheme = {
                     name: "Custom Heading 1",
                     tag: "h1",
                     styles: { ...headings, fontWeight: "bold", fontSize: 48 }
-                }]
-        }
+                }],
+            ...
+        },
+        ...
     }
 }
 
@@ -110,8 +62,6 @@ const myTheme = {
 <RichTextLexicalRenderer value={content}  theme={myTheme} nodes={[MyCustomNode]} />;
 ```
 
-## FAQ
-
-### I'm not using React. How do I render this using other frameworks?
-
-The rendering implementation is really simple and straightforward. You can find the [full code in our repo](https://github.com/webiny/webiny-js/blob/next/packages/react-rich-text-lexical-renderer/src/index.tsx). Using that as a reference, you can quickly put together a renderer in the framework of your choice.
+<Alert type="success" title="What you'll learn">
+  Please <Link href={"https://www.webiny.com/docs/page-builder/theming/theme-object"} target={"_blank"}>read our docs</Link> before add you custom theme.
+</Alert>
