wip: merge and update renderer content

--- a/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
@@ -1,10 +1,11 @@
-import Link from "next/link";import { Alert } from "@/components/Alert";
+import Link from "next/link";
+import { Alert } from "@/components/Alert";
 
-<Alert type="success" title="What you'll learn">
+## What you'll learn
 
   - How to render rich text Lexical Editor content from Headless CMS in React
 
-</Alert>
+
 
 ## Overview
 
