wip: added title and descrition, folders in content block

--- a/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/render-lexical-rich-text-content.mdx
@@ -1,11 +1,14 @@
+---
+title: Rich Text Lexical Content Renderer
+description:  Render rich text Lexical editor content from Headless CMS in React
+---
+
+
 import Link from "next/link";
 import { Alert } from "@/components/Alert";
 
 ## What you'll learn
-
-  - How to render rich text Lexical Editor content from Headless CMS in React
-
-
+- How to render rich text Lexical editor content from Headless CMS in React
 
 ## Overview
 
@@ -14,7 +17,7 @@ Webiny uses Lexical editor [lexical.dev](https://lexical.dev) as a go to Rich Te
 
 Fetch your data from Headless CMS, then pass it to the component like this:
 
-```tsx
+```tsx components/MyView.tsx
 import { RichTextLexicalRenderer } from "@webiny/react-rich-text-lexical-renderer";
 
 // Mount the component
@@ -25,7 +28,7 @@ import { RichTextLexicalRenderer } from "@webiny/react-rich-text-lexical-rendere
 
 You can add custom lexical nodes for rendering your content:
 
-```tsx
+```tsx lexical/nodes/MyCustomNode.ts
 import { ParagraphNode } from "lexical";
 class MyCustomNode extends ParagraphNode {
     ...
@@ -41,8 +44,7 @@ Please check [lexical docs](https://lexical.dev/docs/concepts/nodes), to learn m
 
 Modifying typography options that are displayed by the editor is performed at the theme level, via the theme object:
 
-```tsx
-
+```tsx  app/theme.ts
 const myTheme = {
     styles: {
         typography: {
