docs: add 5.37.0 page builder changelog

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -233,6 +233,14 @@ Prior to this release, the list of revisions in the revisions tab would show the
 
 In the page editor, setting a background image on a page element would not work properly in some cases. This issue has now been addressed.
 
+#### Fixed URL in Page Preview Drawer ([#3355](https://github.com/webiny/webiny-js/pull/3355))
+
+We addressed a visual bug encountered within the page preview drawer, specifically when the website has not been deployed yet: in this specific case the full page URL contained `undefined` due to the absence of a domain. This issue has now been addressed, by showing the page's relative path instead of the full URL.
+
+#### Remove Characters Length Validation for Folder Fields ([#3399](https://github.com/webiny/webiny-js/pull/3399))
+
+With this release, we removed any length validations rule applied to `title` and `slug` folder fields. These fields remain `required`.
+
 ### Deprecating Legacy Page Rendering Engine
 
 Earlier this year, with the [5.35.0 release](/docs/release-notes/5.34.0/changelog), we've introduced [a new page rendering engine](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898) called Page Elements.
