wip: working version of the article

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
@@ -9,9 +9,8 @@ import lexicalInHcms from "./assets/lexical-editor-configuration-api/lexical-edi
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
-  - We will cover the Page Builder and Headless CMS apps, and how to use Lexical Configuration API to customize the Lexical Editor.
+  - We will cover the how to use Lexical Configuration API to customize the Lexical editor in Page Builder and Headless CMS apps.
 </Alert>
-
 
 # Abstract
 
@@ -23,7 +22,7 @@ The core implementation of the Lexical editor is in `[@webiny/lexical-editor pac
 
 # Lexical Editor and Page Builder
 
-***Page Builder app*** has two components that are using the Lexical editor, the ***Heading component,*** and the ***Paragraph component.***
+***Page Builder app*** has two components that are using the Lexical editor, the **Heading component,** and the **Paragraph component.**
 
 From the image below we can see that the user can drag&drop these two components.
 
@@ -33,13 +32,13 @@ From the image below we can see that the user can drag&drop these two components
   style={{ width: 450 }}
 />
 
-***The Heading component*** has a ***Lexical Editor*** configuration that is working only with heading HTML tags h1-h6.  When the user starts typing, Lexical Editor will create a <h1> tag and apply the specified typography theme styles. Every new line is starting with a new heading tag.
+**The Heading component** has a **Lexical Editor** configuration that is working only with heading HTML tags h1-h6.  When the user starts typing, Lexical Editor will create a `<h1>` tag and apply the specified typography theme styles. Every new line is starting with a new heading tag.
 
-The ***Paragraph component*** allow users to have more editing capabilities like inserting lists and quotes. Users can select only typography theme styles for paragraphs, lists, and quotes. When the user starts typing, Lexical Editor will create a <p> tag and apply the specified typography theme styles. Every new line is starting with a paragraph tag.
+The **Paragraph component** allow users to have more editing capabilities like inserting lists and quotes. Users can select only typography theme styles for paragraphs, lists, and quotes. When the user starts typing, Lexical Editor will create a `<p>` tag and apply the specified typography theme styles. Every new line is starting with a paragraph tag.
 
 # Lexical Editor Configuration API for Page Builder
 
-To hook into the Lexical Editor in the ***Page Builder app***, you need to import the Lexical configuration component from the `@webiny/app-page-builder` package.
+To hook into the Lexical Editor in the **Page Builder app**, you need to import the Lexical configuration component from the `@webiny/app-page-builder` package.
 
 ```jsx
 import React from "react";
@@ -52,14 +51,13 @@ const { Heading, Paragraph } = LexicalEditorConfig;
 
 In code example, we can see that `LexicalEditorConfig` has two more configuration components:
 
-`Heading` - allows you to hook into the Lexical Editor configuration for ***Heading Component.***
+`Heading` - allows you to hook into the Lexical Editor configuration for **Heading Component.**
 
-`Paragraph` - allows you to hook into the Lexical Editor configuration for ***the Paragraph component.***
+`Paragraph` - allows you to hook into the Lexical Editor configuration for **the Paragraph component.**
 
-<aside>
-  👉 If you are not familiar with Heading and Paragraph components from the ***Page Builder*** app please first read the ***Lexical Editor and Page Builder*** topic.
-
-</aside>
+<Alert type={"info"}>
+  If you are not familiar with Heading and Paragraph components from the **Page Builder** app please first read the **Lexical Editor and Page Builder** topic.
+</Alert>
 
 It’s important to note that these components are children to the root `LexicalEditorConfig`
 
@@ -72,19 +70,15 @@ component. They need to be nested inside the root component.
 </LexicalEditorConfig>
 ```
 
-
-
 In the table below we can see the high-level configuration components.
 
 | Component | Description |
 | --- | --- |
 | LexicalEditorConfig | The root configuration component.  All configurations related to the Lexical Editor in the Page Builder app must be nested in this component. |
-| Heading | Configuration for the Lexical editor in the Heading component.
-Child component to LexicalEditorConfig |
-| Paragraph | Configuration for the in the Paragraph component.
-Child component to LexicalEditorConfig |
+| Heading | Configuration for the Lexical editor in the Heading component. |
+| Paragraph | Configuration for the in the Paragraph component. |
 
-***Heading*** and ***Paragraph*** configuration components have the same API interface. You can configure three parts of the Lexical Editor:
+**Heading** and **Paragraph** configuration components have the same API interface. You can configure three parts of the Lexical Editor:
 
 - **ToolbarAction** - allows you to configure the actions in the toolbar
 - **Plugin** - allows you to configure the plugins
@@ -92,68 +86,39 @@ Child component to LexicalEditorConfig |
 
 Access to the configuration options:
 
-```jsx
+```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
 <LexicalEditorConfig>
 	<Heading.ToolbarAction name={"toolbarAction"} element={<button>MA</button>} />
   <Paragraph.Plugin name={"newPlugin"} element={<button>MA</button>} />
   <Paragraph.Node name={"newNode"} node={MyLexicalNode} />
 </LexicalEditorConfig>
 ```
+## Header configuration options
 
-### Header configuration options
+| Component            | Props                                                                                  | Description                             |
+|----------------------|----------------------------------------------------------------------------------------|-----------------------------------------|
+| Header.ToolbarAction | name: string  element: React.Element  after: string  before: string  remove: boolean   | Add/remove/update Lexical actions.      |
+| Header.Plugin        | name: string  element: React.Element  after: string  before: string  remove: boolean   | Add/remove/update Lexical plugins.      |
+| Header.Node          | name: string  node: `Klass<LexicalNode>`  after: string  before: string  remove: boolean | Add/remove/update Lexical custom nodes. |                  |                                                                                      |                                    |
 
-| Component | Props | Description |
-| --- | --- | --- |
-| Header.ToolbarAction | name: string
-element: React.Element
-after: string
-before: string
-remove: boolean | Access to toolbar actions.
-Add/remove/update lexical actions. |
-| Header.Node | name: string
-element: Klass<LexicalNode>
-after: string
-before: string
-remove: boolean | Add/remove/update lexical nodes |
-| Header.Plugin | name: string
-element: React.Element
-after: string
-before: string
-remove: boolean | Add/remove/update lexical plugins |
+## Paragraph configuration options
 
-### Paragraph configuration options
+| Component            | Props                                                                                  | Description                             |
+|----------------------|----------------------------------------------------------------------------------------|-----------------------------------------|
+| Paragraph.ToolbarAction | name: string  element: React.Element  after: string  before: string  remove: boolean   | Add/remove/update Lexical actions.      |
+| Paragraph.Plugin        | name: string  element: React.Element  after: string  before: string  remove: boolean   | Add/remove/update Lexical plugins.      |
+| Paragraph.Node          | name: string  node: `Klass<LexicalNode>`  after: string  before: string  remove: boolean | Add/remove/update Lexical custom nodes. |                  |                                                                                      |                                    |
 
-| Component | Props | Description |
-| --- | --- | --- |
-| Paragraph.ToolbarAction | name: string
-element: React.Element
-after: string
-before: string
-remove: boolean | Access to floating toolbar actions.
-Add/remove/update lexical actions. |
-| Paragraph.Node | name: string
-node: Klass<LexicalNode>
-after: string
-before: string
-remove: boolean | Add/remove/update lexical nodes |
-| Paragraph.Plugin | name: string
-element: React.Element
-after: string
-before: string
-remove: boolean | Add/remove/update lexical plugins |
-
-<aside>
-  ⚠️ When you update or add a new action, plugin, or node you must `name` it as a required prop. By this name, we track and manage configurations.
-
-  Webiny has names for all configuration options. Please check the [Lexical Components Catalog](https://www.notion.so/Webiny-Lexical-editor-API-446512d337524f239f004d361ddf01c4?pvs=21) topic to find all the configuration names.
-
-</aside>
+<Alert type={"info"}>
+  When you update or add a new action, plugin, or node you must `name` it as a required prop. By this name, we track and manage configurations.
+  Webiny has names for all configuration options. Please check the **Lexical Components Catalog** topic.
+</Alert>
 
 ## Toolbar configuration
 
 In this section, we will cover configuration step by step and use the Header and Paragraph configuration API to customize the look and functionality of the Heading component.
 
-### Add a new toolbar action component
+## Add a new toolbar action component
 
 To add a new custom toolbar action component register your component with a unique `name` and provide your custom action component in the `element` prop.
 
@@ -164,12 +129,11 @@ To add a new custom toolbar action component register your component with a uniq
 </LexicalEditorConfig>
 ```
 
-<aside>
-  👉 The action by default will be added at the end of the toolbar.
+<Alert type={"info"}>
+  The action by default will be added at the end of the toolbar.
+</Alert>
 
-</aside>
-
-### Override existing action component
+## Override existing action component
 
 To override the existing action component specify the action `name` of the existing [Webiny toolbar action](https://www.notion.so/Webiny-Lexical-editor-API-446512d337524f239f004d361ddf01c4?pvs=21) and provide your toolbar action component in the element prop.
 
@@ -179,7 +143,7 @@ To override the existing action component specify the action `name` of the exist
 </LexicalEditorConfig>
 ```
 
-### Remove action from the toolbar
+## Remove action from the toolbar
 
 To remove the toolbar action specify the Webiny toolbar action name, add the `remove` prop and the action will be removed.
 
@@ -189,12 +153,11 @@ To remove the toolbar action specify the Webiny toolbar action name, add the `re
 </LexicalEditorConfig>
 ```
 
-<aside>
-  ⚠️ Be aware that plugins and nodes related to this particular action are still mounted.
+<Alert type={"warning"}>
+  Be aware that plugins and nodes related to this particular action are still mounted.
+</Alert>
 
-</aside>
-
-### Change the order of the toolbar actions
+## Change the order of the toolbar actions
 
 To change the order of the toolbar actions, first, you need to provide the `name` of the action you want to move. Next, add the `before` or `after` prop with the name of the component that is used as a reference to the preferred spot.
 
@@ -204,7 +167,6 @@ To change the order of the toolbar actions, first, you need to provide the `name
   <Paragraph.ToolbarAction name={"fontSize"} before={"divider2"}/>
 </LexicalEditorConfig>
 ```
-
 ## Plugin configuration
 
 The configuration of the plugins will follow the same approach as the toolbar actions so we will write a code example that will cover all actions.
@@ -275,8 +237,7 @@ const { ToolbarAction, Plugin, Node } = LexicalEditorConfig;
 The difference in the API from the Page Builder app is that here we have only one Lexical Editor configuration.
 
 So the `LexicalEditorConfig` will export directly the ToolbarAction, Plugin, and Node.
-
-### API configuration options
+## API configuration options
 
 | Component | Props | Description |
 | --- | --- | --- |
@@ -288,7 +249,7 @@ before: string
 remove: boolean | Access to toolbar actions.
 Add/remove/update lexical actions. |
 | Node | name: string
-element: Klass<LexicalNode>
+element: `Klass<LexicalNode>`
 after: string
 before: string
 remove: boolean | Add/remove/update lexical nodes |
@@ -352,22 +313,6 @@ Node configuration API has a `node` prop where you can add the custom node class
   <Node name={"newNode"} remove />
 </LexicalEditorConfig>
 ```
-
-## Rich Text Lexical Renderer
-
-If your solution is using Next.js for example, you need to fetch the content through the GraphQL API. To render the Lexical content on your web pages use the `RichTextLexicalRenderer` component from the `@webiny/rich-text-lexical-renderer` package.
-
-Example:
-
-```jsx
-import { RichTextLexicalRenderer } from @webiny/rich-text-lexical-renderer;
-
-// Render the content on your page
-const MyComponent = ({ hcmsContent }) => {
-  return <RichTextLexicalRenderer value={hcmsContent} />;
-}
-```
-
 # Lexical Components Catalog
 
 In this section are have a list of specifications of the core Webiny components for the Lexical Editor that are configurable and exposed for developers.
@@ -438,13 +383,16 @@ The table below shows all core nodes that are used by Webiny in `@webiny/lexical
 
 Core Lexical nodes by Webiny can’t be removed or updated with the configuration API.
 
-<aside>
-  ⚠️ When you create your custom nodes, be sure to not override the same node types from the table.
-
-</aside>
+<Alert type={"info"}>
+  When you create your custom nodes, be sure to not override the same node types from the table.
+</Alert>
 
 # Resources
 
 To learn more about how Lexical Editor works before starting with the custom configuration with the Webiny please check Facebook’s official website - [https://lexical.dev/](https://lexical.dev/).
 
 Also, check the lexical playground ([https://playground.lexical.dev/](https://playground.lexical.dev/)), here you can find already build features that can be implemented for your app.
+
+
+
+
